crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__tiny_5_rows_spinner.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│> hello                                                                         │
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=2 col=1
